...
        comment: "Button string to open settings that allows user to switch their default browser to Firefox.")
}

// MARK: - FxAWebViewController
extension String {
    public static let FxAWebContentAccessibilityLabel = MZLocalizedString(
        key: "Web content",
        tableName: nil,
        value: nil,
        comment: "Accessibility label for the main web content view")
}

// MARK: - QuickActions
...
    public static let TabTrayToggleAccessibilityValueOff = MZLocalizedString(
        key: "Off",
        tableName: "PrivateBrowsing",
        value: nil,
        comment: "Toggled OFF accessibility value")
    public static let TabTrayViewAccessibilityLabel = MZLocalizedString(
        key: "Tabs Tray",
        tableName: nil,
        value: nil,
        comment: "Accessibility label for the Tabs Tray view.")
    public static let TabTrayNoTabsAccessibilityHint = MZLocalizedString(
        key: "No tabs",
        tableName: nil,
...
